Fix spacing issues on post good page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -594,10 +594,10 @@ label {
       display: table-cell;
       text-align: right;
       margin-right: 2%;
-      width: 18%;
+      width: 23%;
     }
     .d-field {
-      width: 75%;
+      width: 70%;
       float: left;
       padding-bottom: 20px;
     }
